kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-gitops-new
spec:
  rules:
    - http:
        paths:
          - path: /
            # pathType: Prefix
            backend:
              serviceName: hello-gitops
              servicePort: http
